src/objects/KB_Global_Search_History__c.object
<CustomObject>
    <fields>
        <fullName>Apex_BatchId_List__c</fullName>
        <label>Apex Batch Id List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apex_BatchId__c</fullName>
        <label>Apex Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apex_Replacement_BatchId__c</fullName>
        <label>Apex Replacement Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Type__c</fullName>
        <label>Article Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Articles_Searched__c</fullName>
        <label>Articles Searched</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Articles_Selected__c</fullName>
        <label>Articles Selected</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Articles_Updated__c</fullName>
        <label>Articles Updated</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Names__c</fullName>
        <label>Field Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishNewVersion__c</fullName>
        <label>PublishNewVersion</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishStatus__c</fullName>
        <label>PublishStatus</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_String__c</fullName>
        <label>Replacement String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Search_String__c</fullName>
        <label>Search String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>KB Global Search History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Article_Type__c</columns>
        <columns>PublishStatus__c</columns>
        <columns>Field_Names__c</columns>
        <columns>Search_String__c</columns>
        <columns>Replacement_String__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>KB Global Search History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KB Global Search History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>